// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TeamMemberCard.vue - Snapshot Tests (Before Phase 4 Refactoring) > should match snapshot - admin member card 1`] = `
"<div data-v-13b30d11="" class="member-card">
  <!-- Drag Handle - Only this area triggers drag -->
  <div data-v-13b30d11="" class="drag-handle"><span data-v-13b30d11="" class="drag-icon">⋮⋮</span></div>
  <div data-v-13b30d11="" class="flex items-center gap-4 flex-1 rounded-xl p-2 -m-2">
    <div data-v-13b30d11="" class="w-12 h-12 rounded-2xl overflow-hidden flex-shrink-0" style="box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
      <div data-v-13b30d11="" class="avatar-placeholder">A</div>
    </div>
    <div data-v-13b30d11="" class="flex-1">
      <h3 data-v-13b30d11="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold">Admin User</h3>
      <p data-v-13b30d11="" class="m-0 mb-3 text-gray-500 text-base">john.doe@example.com</p>
      <div data-v-13b30d11="" class="flex gap-3 items-center flex-wrap"><span data-v-13b30d11="" class="role admin"><span data-v-13b30d11="" class="text-base leading-none">👑</span> 管理員</span><span data-v-13b30d11="" class="status active">活躍</span>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-13b30d11="" class="flex gap-2 items-center flex-wrap"><button data-v-13b30d11="" class="btn btn-danger">停用</button><button data-v-13b30d11="" class="btn btn-secondary"> 重設密碼 </button><button data-v-13b30d11="" class="btn btn-danger"> 移除 </button></div><!-- Edit Member Modal -->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TeamMemberCard.vue - Snapshot Tests (Before Phase 4 Refactoring) > should match snapshot - basic member card render 1`] = `
"<div data-v-13b30d11="" class="member-card">
  <!-- Drag Handle - Only this area triggers drag -->
  <div data-v-13b30d11="" class="drag-handle"><span data-v-13b30d11="" class="drag-icon">⋮⋮</span></div>
  <div data-v-13b30d11="" class="flex items-center gap-4 flex-1 rounded-xl p-2 -m-2">
    <div data-v-13b30d11="" class="w-12 h-12 rounded-2xl overflow-hidden flex-shrink-0" style="box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
      <div data-v-13b30d11="" class="avatar-placeholder">J</div>
    </div>
    <div data-v-13b30d11="" class="flex-1">
      <h3 data-v-13b30d11="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold">John Doe</h3>
      <p data-v-13b30d11="" class="m-0 mb-3 text-gray-500 text-base">john.doe@example.com</p>
      <div data-v-13b30d11="" class="flex gap-3 items-center flex-wrap"><span data-v-13b30d11="" class="role agent"><span data-v-13b30d11="" class="text-base leading-none">🎧</span> 客服</span><span data-v-13b30d11="" class="status active">活躍</span>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-13b30d11="" class="flex gap-2 items-center flex-wrap"><button data-v-13b30d11="" class="btn btn-danger">停用</button><button data-v-13b30d11="" class="btn btn-secondary"> 重設密碼 </button><button data-v-13b30d11="" class="btn btn-danger"> 移除 </button></div><!-- Edit Member Modal -->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TeamMemberCard.vue - Snapshot Tests (Before Phase 4 Refactoring) > should match snapshot - inactive member 1`] = `
"<div data-v-13b30d11="" class="member-card">
  <!-- Drag Handle - Only this area triggers drag -->
  <div data-v-13b30d11="" class="drag-handle"><span data-v-13b30d11="" class="drag-icon">⋮⋮</span></div>
  <div data-v-13b30d11="" class="flex items-center gap-4 flex-1 rounded-xl p-2 -m-2">
    <div data-v-13b30d11="" class="w-12 h-12 rounded-2xl overflow-hidden flex-shrink-0" style="box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
      <div data-v-13b30d11="" class="avatar-placeholder">J</div>
    </div>
    <div data-v-13b30d11="" class="flex-1">
      <h3 data-v-13b30d11="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold">John Doe</h3>
      <p data-v-13b30d11="" class="m-0 mb-3 text-gray-500 text-base">john.doe@example.com</p>
      <div data-v-13b30d11="" class="flex gap-3 items-center flex-wrap"><span data-v-13b30d11="" class="role agent"><span data-v-13b30d11="" class="text-base leading-none">🎧</span> 客服</span><span data-v-13b30d11="" class="status inactive">停用</span>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-13b30d11="" class="flex gap-2 items-center flex-wrap"><button data-v-13b30d11="" class="btn btn-success">啟用</button><button data-v-13b30d11="" class="btn btn-secondary"> 重設密碼 </button><button data-v-13b30d11="" class="btn btn-danger"> 移除 </button></div><!-- Edit Member Modal -->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TeamMemberCard.vue - Snapshot Tests (Before Phase 4 Refactoring) > should match snapshot - member with loading state 1`] = `
"<div data-v-13b30d11="" class="member-card">
  <!-- Drag Handle - Only this area triggers drag -->
  <div data-v-13b30d11="" class="drag-handle"><span data-v-13b30d11="" class="drag-icon">⋮⋮</span></div>
  <div data-v-13b30d11="" class="flex items-center gap-4 flex-1 rounded-xl p-2 -m-2">
    <div data-v-13b30d11="" class="w-12 h-12 rounded-2xl overflow-hidden flex-shrink-0" style="box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
      <div data-v-13b30d11="" class="avatar-placeholder">J</div>
    </div>
    <div data-v-13b30d11="" class="flex-1">
      <h3 data-v-13b30d11="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold">John Doe</h3>
      <p data-v-13b30d11="" class="m-0 mb-3 text-gray-500 text-base">john.doe@example.com</p>
      <div data-v-13b30d11="" class="flex gap-3 items-center flex-wrap"><span data-v-13b30d11="" class="role agent"><span data-v-13b30d11="" class="text-base leading-none">🎧</span> 客服</span><span data-v-13b30d11="" class="status active">活躍</span>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-13b30d11="" class="flex gap-2 items-center flex-wrap"><button data-v-13b30d11="" class="btn btn-danger" disabled="">停用</button><button data-v-13b30d11="" class="btn btn-secondary" disabled=""> 重設密碼 </button><button data-v-13b30d11="" class="btn btn-danger" disabled=""> 移除 </button></div><!-- Edit Member Modal -->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TeamMemberCard.vue - Snapshot Tests (Before Phase 4 Refactoring) > should match snapshot - member with no teams 1`] = `
"<div data-v-13b30d11="" class="member-card">
  <!-- Drag Handle - Only this area triggers drag -->
  <div data-v-13b30d11="" class="drag-handle"><span data-v-13b30d11="" class="drag-icon">⋮⋮</span></div>
  <div data-v-13b30d11="" class="flex items-center gap-4 flex-1 rounded-xl p-2 -m-2">
    <div data-v-13b30d11="" class="w-12 h-12 rounded-2xl overflow-hidden flex-shrink-0" style="box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
      <div data-v-13b30d11="" class="avatar-placeholder">J</div>
    </div>
    <div data-v-13b30d11="" class="flex-1">
      <h3 data-v-13b30d11="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold">John Doe</h3>
      <p data-v-13b30d11="" class="m-0 mb-3 text-gray-500 text-base">john.doe@example.com</p>
      <div data-v-13b30d11="" class="flex gap-3 items-center flex-wrap"><span data-v-13b30d11="" class="role agent"><span data-v-13b30d11="" class="text-base leading-none">🎧</span> 客服</span><span data-v-13b30d11="" class="status active">活躍</span>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-13b30d11="" class="flex gap-2 items-center flex-wrap"><button data-v-13b30d11="" class="btn btn-danger">停用</button><button data-v-13b30d11="" class="btn btn-secondary"> 重設密碼 </button><button data-v-13b30d11="" class="btn btn-danger"> 移除 </button></div><!-- Edit Member Modal -->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`TeamMemberCard.vue - Snapshot Tests (Before Phase 4 Refactoring) > should match snapshot - member with single team 1`] = `
"<div data-v-13b30d11="" class="member-card">
  <!-- Drag Handle - Only this area triggers drag -->
  <div data-v-13b30d11="" class="drag-handle"><span data-v-13b30d11="" class="drag-icon">⋮⋮</span></div>
  <div data-v-13b30d11="" class="flex items-center gap-4 flex-1 rounded-xl p-2 -m-2">
    <div data-v-13b30d11="" class="w-12 h-12 rounded-2xl overflow-hidden flex-shrink-0" style="box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);">
      <div data-v-13b30d11="" class="avatar-placeholder">J</div>
    </div>
    <div data-v-13b30d11="" class="flex-1">
      <h3 data-v-13b30d11="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold">John Doe</h3>
      <p data-v-13b30d11="" class="m-0 mb-3 text-gray-500 text-base">john.doe@example.com</p>
      <div data-v-13b30d11="" class="flex gap-3 items-center flex-wrap"><span data-v-13b30d11="" class="role agent"><span data-v-13b30d11="" class="text-base leading-none">🎧</span> 客服</span><span data-v-13b30d11="" class="status active">活躍</span>
        <!--v-if-->
      </div>
    </div>
  </div>
  <div data-v-13b30d11="" class="flex gap-2 items-center flex-wrap"><button data-v-13b30d11="" class="btn btn-danger">停用</button><button data-v-13b30d11="" class="btn btn-secondary"> 重設密碼 </button><button data-v-13b30d11="" class="btn btn-danger"> 移除 </button></div><!-- Edit Member Modal -->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;
